Addition of meta "width=device-width"

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
       max-width: 1300px;
     }
     
-    /* Navigation bar block /////////////////////////////////////////////////////////*/
+    /* Navigation bar block //////////////(md screens)/////////////////////////////*/
     .navbar
     {
       display: flex;
@@ -68,7 +68,6 @@
       text-decoration: none;
       color: #0065FC;
       font-weight: bold;
-      padding-top: px;
     }
       
     
@@ -1185,7 +1184,6 @@
       text-decoration: none;
       color: #0065FC;
       font-weight: bold;
-      padding-top: px;
     }
       
     
@@ -2311,7 +2309,6 @@
       text-decoration: none;
       color: #0065FC;
       font-weight: bold;
-      padding-top: px;
     }
       
     
@@ -4423,11 +4420,11 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
-      padding-top: 40px;
       padding-left: 40px;
       background-color: #F2F2F2;
       height: 330px;
       padding-bottom: 40px;
+      padding-top: 40px;
     }
     
     footer li
@@ -4441,14 +4438,19 @@
       color: black;
     }
     
-    .about nav, .our_lodges nav, .assistance nav
+    .about, .our_lodges, .assistance
     {
-     margin-left: -40px; 
-     margin-top: -10px;
-     line-height: 25px;
+     margin-left: px; 
+     margin-top: px;
+     line-height: px;
     } 
       
-        
+     .about h4, .our_lodges h4, .assistance h4
+    {  
+     margin-left: 40px; 
+      
+    }  
+      
       
       
     }
