--- a/style.css
+++ b/style.css
@@ -412,10 +412,10 @@
      }
  
     .block_lodging_photos
-    {
-     
+     {
      width: 100%;
-    }
+     padding-bottom: 45px;
+     }
     
       
      #lodging_title
@@ -663,7 +663,6 @@
        width: 83.5%;
        box-shadow: 0 0 25px -15px #444444;
        border-radius: 15px 15px 15px 15px;  
-       margin-bottom: 40px;
      }
      
      .hotel_mere_stars
@@ -1112,7 +1111,7 @@
      .ilesFrioul_pic
      {
        width: 100%;
-       height: 150px;
+       height: 145px;
        object-fit: cover;
        object-position: 48% 5%;
        border-radius: 20px 20px 0px 0px;
@@ -1200,7 +1199,7 @@
      .Longchamp_pic
      {
        width: 100%;
-       height: 154px;
+       height: 151px;
        object-fit: cover;
        object-position: 48% 15%;
        border-radius: 20px 20px 0px 0px;
