--- a/style.css
+++ b/style.css
@@ -1,15 +1,19 @@
 
-  #bloc_page
-  {
-  max-width: 1024px;
-  width: 100%;
-  margin: 0 auto;
-  }
+#bloc_page
+{
+    max-width: 1024px;
+    width: 100%;
+    margin: 0 auto;
+}
     
-  body
-  {
-  width: 100%;
-  }
+ body
+{
+    width: 100%;
+}
+
+*{
+    font-family: 'Raleway', sans-serif;
+ }
 
 
 
